修改需求、redis\mysql连接

--- a/src/main/resources/conf/locale/jdbc.properties
+++ b/src/main/resources/conf/locale/jdbc.properties
@@ -1,4 +1,9 @@
-jdbc.url=jdbc:mysql://${jdbc.url.ip}?useUnicode=true&characterEncoding=utf8
-jdbc.user=${jdbc.username}
-jdbc.password=${jdbc.password}
+#jdbc.url=jdbc:mysql://${jdbc.url.ip}?useUnicode=true&characterEncoding=utf8
+#jdbc.user=${jdbc.username}
+#jdbc.password=${jdbc.password}
+#jdbc.test=test
+
+jdbc.url=jdbc:mysql://zccxywy.cn/hotel?useUnicode=true&characterEncoding=utf8
+jdbc.user=root
+jdbc.password=root
 jdbc.test=test
