--- a/src/main/resources/conf/locale/jdbc.properties
+++ b/src/main/resources/conf/locale/jdbc.properties
@@ -3,7 +3,7 @@
 #jdbc.password=${jdbc.password}
 #jdbc.test=test
 
-jdbc.url=jdbc:mysql://zccxywy.cn/hotel?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://47.94.129.190:3306/hotel?useUnicode=true&characterEncoding=utf8
 jdbc.user=root
-jdbc.password=root
+jdbc.password=YJQTDurbbr0324!
 jdbc.test=test
