--- a/src/main/resources/conf/locale/jdbc.properties
+++ b/src/main/resources/conf/locale/jdbc.properties
@@ -1,9 +1,4 @@
-#jdbc.url=jdbc:mysql://${jdbc.url.ip}?useUnicode=true&characterEncoding=utf8
-#jdbc.user=${jdbc.username}
-#jdbc.password=${jdbc.password}
-#jdbc.test=test
-
-jdbc.url=jdbc:mysql://47.94.129.190:3306/hotel?useUnicode=true&characterEncoding=utf8
-jdbc.user=root
-jdbc.password=YJQTDurbbr0324!
+jdbc.url=jdbc:mysql://${jdbc.url.ip}?useUnicode=true&characterEncoding=utf8
+jdbc.user=${jdbc.username}
+jdbc.password=${jdbc.password}
 jdbc.test=test
